exports[`invalid(1): {\"scripts\": {\"test\": \"node --test\", \"build\": \"tsc\", \"lint\": \"eslint\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test", "build": "tsc", "lint": "eslint"}}

`;

exports[`invalid(1): {\"scripts\": {\"test\": \"node --test\", \"build\": \"tsc\", \"lint\": \"eslint\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test", "build": "tsc", "lint": "eslint"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Script names should be sorted alphabetically.

Output:
  1 | {"scripts": {
  2 | 		"build": "tsc",
  3 | 		"lint": "eslint",
  4 | 		"test": "node --test"
  5 | 	}}

`;

exports[`invalid(2): {\"scripts\": {\"prebuild\": \"echo start\", \"postbuild\": \"echo done\", \"build:watch\": \"tsc --watch\", \"build\": \"tsc\"}} 1`] = `

[Input]
  1 | {"scripts": {"prebuild": "echo start", "postbuild": "echo done", "build:watch": "tsc --watch", "build": "tsc"}}

`;

exports[`invalid(2): {\"scripts\": {\"prebuild\": \"echo start\", \"postbuild\": \"echo done\", \"build:watch\": \"tsc --watch\", \"build\": \"tsc\"}} 2`] = `

Message:
> 1 | {"scripts": {"prebuild": "echo start", "postbuild": "echo done", "build:watch": "tsc --watch", "build": "tsc"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Script names should be sorted alphabetically.

Output:
  1 | {"scripts": {
  2 | 		"build": "tsc",
  3 | 		"build:watch": "tsc --watch",
  4 | 		"postbuild": "echo done",
  5 | 		"prebuild": "echo start"
  6 | 	}}

`;

exports[`invalid(3): {\n\t\"scripts\": {\n\t\t\"test\": \"node --test\",\n\t\t\"build\": \"tsc\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"scripts": {
  3 | 		"test": "node --test",
  4 | 		"build": "tsc"
  5 | 	}
  6 | }

`;

exports[`invalid(3): {\n\t\"scripts\": {\n\t\t\"test\": \"node --test\",\n\t\t\"build\": \"tsc\"\n\t}\n} 2`] = `

Message:
  1 | {
> 2 | 	"scripts": {
    | 	           ^
> 3 | 		"test": "node --test",
    | ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		"build": "tsc"
    | ^^^^^^^^^^^^^^^^
> 5 | 	}
    | ^^ Script names should be sorted alphabetically.
  6 | }

Output:
  1 | {
  2 | 	"scripts": {
  3 | 		"build": "tsc",
  4 | 		"test": "node --test"
  5 | 	}
  6 | }

`;

exports[`invalid(4): {\n  \"scripts\": {\n    \"test\": \"node --test\",\n    \"build\": \"tsc\"\n  }\n} 1`] = `

[Input]
  1 | {
  2 |   "scripts": {
  3 |     "test": "node --test",
  4 |     "build": "tsc"
  5 |   }
  6 | }

`;

exports[`invalid(4): {\n  \"scripts\": {\n    \"test\": \"node --test\",\n    \"build\": \"tsc\"\n  }\n} 2`] = `

Message:
  1 | {
> 2 |   "scripts": {
    |              ^
> 3 |     "test": "node --test",
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |     "build": "tsc"
    | ^^^^^^^^^^^^^^^^^^
> 5 |   }
    | ^^^ Script names should be sorted alphabetically.
  6 | }

Output:
  1 | {
  2 |   "scripts": {
  3 |     "build": "tsc",
  4 |     "test": "node --test"
  5 |   }
  6 | }

`;

exports[`invalid(5): {\n  \"scripts\": {\"test\": \"node --test\", \"build\": \"tsc\"}\n} 1`] = `

[Input]
  1 | {
  2 |   "scripts": {"test": "node --test", "build": "tsc"}
  3 | }

`;

exports[`invalid(5): {\n  \"scripts\": {\"test\": \"node --test\", \"build\": \"tsc\"}\n} 2`] = `

Message:
  1 | {
> 2 |   "scripts": {"test": "node --test", "build": "tsc"}
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Script names should be sorted alphabetically.
  3 | }

Output:
  1 | {
  2 |   "scripts": {
  3 |     "build": "tsc",
  4 |     "test": "node --test"
  5 |   }
  6 | }

`;

exports[`invalid(6): {\n  \"scripts\": { \"test\": \"node --test\", \"build\": \"tsc\"}\n} 1`] = `

[Input]
  1 | {
  2 |   "scripts": { "test": "node --test", "build": "tsc"}
  3 | }

`;

exports[`invalid(6): {\n  \"scripts\": { \"test\": \"node --test\", \"build\": \"tsc\"}\n} 2`] = `

Message:
  1 | {
> 2 |   "scripts": { "test": "node --test", "build": "tsc"}
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Script names should be sorted alphabetically.
  3 | }

Output:
  1 | {
  2 |   "scripts": {
  3 |     "build": "tsc",
  4 |     "test": "node --test"
  5 |   }
  6 | }

`;

exports[`invalid(7): {\r\n\t\"scripts\": {\r\n\t\t\"test\": \"node --test\",\r\n\t\t\"build\": \"tsc\"\r\n\t}\r\n} 1`] = `

[Input]
  1 | {
  2 | 	"scripts": {
  3 | 		"test": "node --test",
  4 | 		"build": "tsc"
  5 | 	}
  6 | }

`;

exports[`invalid(7): {\r\n\t\"scripts\": {\r\n\t\t\"test\": \"node --test\",\r\n\t\t\"build\": \"tsc\"\r\n\t}\r\n} 2`] = `

Message:
  1 | {
> 2 | 	"scripts": {
    | 	           ^
> 3 | 		"test": "node --test",
    | ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		"build": "tsc"
    | ^^^^^^^^^^^^^^^^
> 5 | 	}
    | ^^ Script names should be sorted alphabetically.
  6 | }

Output:
  1 | {
  2 | 	"scripts": {
  3 | 		"build": "tsc",
  4 | 		"test": "node --test"
  5 | 	}
  6 | }

`;
